add model.ErrorResponse
